--- a/app/views/merchant/discounts/_discounts.html.erb
+++ b/app/views/merchant/discounts/_discounts.html.erb
@@ -1,4 +1,4 @@
-<table class="table table-striped navbar-custom">
+<table class="table table-striped table-hover navbar-custom">
   <thead class="custom" text-align="center" align="center">
     <tr>
       <th colspan="4" style="font-family: Quicksand;">Merchant discounts</th>
