--- a/app/views/admin/invoices/show.html.erb
+++ b/app/views/admin/invoices/show.html.erb
@@ -23,15 +23,13 @@
   </tbody>
 </table>
 
-
 <%= form_with url: admin_invoice_path( @invoice), method: :patch, local: true do |form| %>
     <%= form.hidden_field :invoice_id, value: @invoice.id %>
     <%= form.select :status, options_for_select([:cancelled, 'in progress', :completed], @invoice.status) %>
   <%= form.submit "Update Invoice Status" %>
 <% end %>
-<br>
-<h2>Items On This Invoice:</h2>
-<br>
+
+<br/><h2>Items On This Invoice:</h2><br/>
 
 <table class="table table-striped table-hover navbar-custom">
   <thead text-align="center" align="center" class="customblack" style="color: white;">
